--- a/src/pages/posts/posts.css
+++ b/src/pages/posts/posts.css
@@ -211,7 +211,7 @@
 
 
 .home_video{
-    height: 400px;
+    height: 500px;
     width: 100%;
     padding: 5px 0;
 
@@ -220,6 +220,11 @@
 }
 
 .home_video_player{
+    height: auto;
+    width: 100%;
+}
+
+.home_video_player .video{
     /* position: absolute; */
     width: 100%;
     height: 270px;
@@ -231,6 +236,11 @@
     justify-content: center;
     align-items: center; */
     /* font-size: 1.2rem; */
+}
+
+.video_caption{
+    padding: 10px;
+    font-size: 1.2rem;
 }
 
 .card_player{
@@ -289,6 +299,7 @@
     display: flex;
     gap: 10px;
     width: 100%;
+    margin-bottom: 65px;
 }
 
 audio{
