--- a/src/pages/posts/posts.css
+++ b/src/pages/posts/posts.css
@@ -331,6 +331,8 @@ audio{
     gap: 15px;
     width: fit-content;
     border-radius: 15px;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -432,6 +434,7 @@ audio{
         margin: 0 auto;
         padding: 15px 0;      
         width: 90%; 
+        border-radius: 0;
       
     }
 
