--- a/src/pages/meetings/meetings.css
+++ b/src/pages/meetings/meetings.css
@@ -307,7 +307,7 @@
 }
 
 .add_meeting{
-    overflow: hidden;
+    /* overflow: scroll; */
     width: 80%;
     margin: 0 auto;
     display: flex;
