--- a/src/pages/posts/posts.css
+++ b/src/pages/posts/posts.css
@@ -13,6 +13,23 @@
     /* max-height: 100px; */
 }
 
+.group_btns{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.shared_video_1{
+    width: 300px;
+    height: 180px;
+}
+
+.video_wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .share_details{
     display: flex;
     flex-direction: column;
@@ -405,6 +422,37 @@ audio{
     
 }
 
+.group_btns button{
+    font-size: 1.1rem;
+}
+
+.shared_video_2{
+    width: 100%;
+    height: 250px;
+}
+
+video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+.video_progress{
+    height: 4px;
+    width: 100%;
+    background-color: rgb(226, 226, 226);
+    margin-top: 3px;
+    display: flex;
+    align-items: center;
+}
+
+.progres_rate{
+    background-color: var(--primary);
+    height: 4px;
+    /* width: 50%; */
+}
+
 /* .view_post_bofy{
     border: 1px solid red;
 } */
@@ -427,6 +475,24 @@ audio{
         
         /* margin: 15px; */
     
+    }
+
+    .shared_video_1{
+        width: 280px;
+        height: 150px;
+    }
+
+    .video_filename{
+        display: block;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid #c1c2c3;
+        text-align: center;
+        padding: 5px;
+    }
+
+    .group_btns button{
+        font-size: 0.8rem;
     }
 
     .shared_video{
