--- a/src/components/remarks/remarks.css
+++ b/src/components/remarks/remarks.css
@@ -15,6 +15,24 @@
     gap: 10px;
 }
 
+.liks_m{
+    width: 25px;
+    height: 25px;
+}
+
+.liks_m img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.likes_t{
+    display: flex;
+    align-items: center;
+    gap: 2px;
+}
+
 .btn_likes{
     width: 30px;
     height: 30px;
