--- a/src/pages/messages/messages.css
+++ b/src/pages/messages/messages.css
@@ -264,10 +264,20 @@
     gap: 10px;
     padding: 5px;
     min-height: 50px;
+    bottom: 50px;
+    width: 98%;
     position: relative;
+    position: fixed;
     background-color: var(--sec);
     /* border: 1px solid red; */
 }
+
+.textarea {
+    width: 100%;
+    overflow: hidden;
+    padding: 10px;
+}
+
 
 .form_inner_wrapper{
     display: flex;
@@ -363,6 +373,7 @@
     font-size: 1.1rem;
     border: none;
     outline: none;
+    background-color: transparent;
 }
 
 .message_p{
