--- a/src/components/alert/alert.css
+++ b/src/components/alert/alert.css
@@ -115,3 +115,60 @@
    
     
 }
+
+.alert_card_wrapper{
+    display: flex;
+    flex-direction: column;
+   gap: 5px;
+   /* width: 95%; */
+   margin: 0 auto;
+   box-shadow: var(--shadow);
+   padding: 15px;
+}
+
+.alert_card_top{
+    display: flex;
+    align-items: center;
+    gap: 7px;
+}
+
+.alert_card_body{
+    display: flex;
+}
+.alert_card_left{
+    flex: 2;
+}
+
+.alet_card_photo{
+    height: 40px;
+    width: 40px;
+}
+
+.alet_card_photo img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+
+.alert_card_title{
+    color: var(--primary);
+    font-size: 1rem;
+}
+
+.alert_card_top svg {
+    color: var(--primary);
+    font-size: 1.2rem;
+}
+
+.alert_card_footer button{
+    background-color: transparent;
+    border: none;
+    color: var(--primary);
+    margin: 5px;
+    font-size: 1rem;
+    cursor: pointer;
+    padding: 5px 9px;
+    border-radius: 3px;
+}
