--- a/src/pages/questions/ques.css
+++ b/src/pages/questions/ques.css
@@ -13,6 +13,12 @@
     
 }
 
+.share_answer{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
 .que_body{
     width: 100%;
 }
@@ -157,6 +163,10 @@
     display: flex;
     flex-direction: column-reverse;
     gap: 25px;
+}
+
+.answer_text{
+    font-size: 1.1rem;
 }
 
 .activity_card{
